--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,6 @@ html {
 
 body > * {
   margin-inline: auto;
-  max-width: 1200px;
 }
 
 body {
